[package]
name = "template_yaml"
description = "A YAML templating engine"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/dbenoit17/template-yaml"
repository = "https://github.com/dbenoit17/template-yaml"
license-file = "LICENSE"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.19.7"

[dependencies]
lalrpop-util = {version = "0.19.7", features = ["lexer"]}
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
regex = "1"
